feat(): create open api for methods show
